# nodejs-gstreamer

backend/: CMakeLists.txt  Dockerfile  README.md  binding.gyp  gstreamer-pipeline.js  index.js  package-lock.json  package.json
backend/src/: gst_bridge.c  gstreamer-pipeline.cpp  native_gst_wrapper.c  native_gst_wrapper.h
backend/test/: test_gstreamer_pipeline.cpp
gstreamer-worker/: .gitignore  Dockerfile  ReadMe.md  makefile
gstreamer-worker/src/: GstUtils.cpp  GstUtils.hpp  HwAccelDetector.hpp  Logger.cpp  Logger.hpp  PipelineContext.cpp  PipelineContext.hpp  PipelineManager.cpp  PipelineManager.hpp  Utils.hpp  ZmqHandler.cpp  ZmqHandler.hpp  config.cpp  config.hpp  main.cpp
ui/: index-jpg.html  index-webm.html
